@@ -20,6 +20,9 @@
 		'group_tools:menu:invitations' => "Manage invitations",
 		
 		// plugin settings
+		'group_tools:settings:invite:title' => "Group invitation options",
+		'group_tools:settings:management:title' => "General group options",
+	
 		'group_tools:settings:admin_create' => "Limit the creation of groups to Site administrators",
 		'group_tools:settings:admin_create:description' => "Setting this to 'Yes' will make the creation of a new group impossible for a normal user of your site.",
 		
