@@ -26,70 +26,75 @@
 		$auto_joins = string_to_tag_array($auto_joins);
 	}
 	
-?>
-<div>
-	<?php 
-		echo elgg_echo("group_tools:settings:admin_create");
-		echo "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[admin_create]", "options_values" => $noyes_options, "value" => $plugin->admin_create));
-	?>
-	<div class="elgg-subtext"><?php echo elgg_echo("group_tools:settings:admin_create:description"); ?></div>
-</div>
-<div>
-	<?php 
-		echo elgg_echo("group_tools:settings:admin_transfer");
-		echo "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[admin_transfer]", "options_values" => $admin_transfer_options, "value" => $plugin->admin_transfer));
-	?>
-</div>
-<div>
-	<?php 
-		echo elgg_echo("group_tools:settings:multiple_admin");
-		echo "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[multiple_admin]", "options_values" => $noyes_options, "value" => $plugin->multiple_admin));
-	?>
-</div>
-<div>
-	<?php 
-		echo elgg_echo("group_tools:settings:invite");
-		echo "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[invite]", "options_values" => $noyes_options, "value" => $plugin->invite));
-	?>
-</div>
-<div>
-	<?php 
-		echo elgg_echo("group_tools:settings:invite_email");
-		echo "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[invite_email]", "options_values" => $noyes_options, "value" => $plugin->invite_email));
-	?>
-</div>
-<div>
-	<?php 
-		echo elgg_echo("group_tools:settings:invite_csv");
-		echo "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[invite_csv]", "options_values" => $noyes_options, "value" => $plugin->invite_csv));
-	?>
-</div>
-<div>
-	<?php 
-		echo elgg_echo("group_tools:settings:mail");
-		echo "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[mail]", "options_values" => $noyes_options, "value" => $plugin->mail));
-	?>
-</div>
-<div>
-	<?php 
-		echo elgg_echo("group_tools:settings:listing");
-		echo "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[group_listing]", "options_values" => $listing_options, "value" => $plugin->group_listing));
-	?>
-</div>
-<div>
-	<?php 
-		echo elgg_echo("group_tools:settings:search_index");
-		echo "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[search_index]", "options_values" => $noyes_options, "value" => $plugin->search_index));
-	?>
-</div>
-<div>
-	<?php 
-		echo elgg_echo("group_tools:settings:auto_notification");
-		echo "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[auto_notification]", "options_values" => $noyes_options, "value" => $plugin->auto_notification));
-	?>
-</div>
-<?php 
+	
+	// group management settings
+	$title = elgg_echo("group_tools:settings:management:title");
+	
+	$body = "<div>";
+	$body .= elgg_echo("group_tools:settings:admin_create");
+	$body .= "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[admin_create]", "options_values" => $noyes_options, "value" => $plugin->admin_create));
+	$body .= "<div class='elgg-subtext'>" . elgg_echo("group_tools:settings:admin_create:description") . "</div>";
+	$body .= "</div>";
+	
+	$body .= "<div>";
+	$body .= elgg_echo("group_tools:settings:admin_transfer");
+	$body .= "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[admin_transfer]", "options_values" => $admin_transfer_options, "value" => $plugin->admin_transfer));
+	$body .= "</div>";
+	
+	$body .= "<br />";
+	
+	$body .= "<div>";
+	$body .= elgg_echo("group_tools:settings:search_index");
+	$body .= "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[search_index]", "options_values" => $noyes_options, "value" => $plugin->search_index));
+	$body .= "</div>";
+	
+	$body .= "<div>";
+	$body .= elgg_echo("group_tools:settings:auto_notification");
+	$body .= "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[auto_notification]", "options_values" => $noyes_options, "value" => $plugin->auto_notification));
+	$body .= "</div>";
+	
+	$body .= "<br />";
+	
+	$body .= "<div>";
+	$body .= elgg_echo("group_tools:settings:multiple_admin");
+	$body .= "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[multiple_admin]", "options_values" => $noyes_options, "value" => $plugin->multiple_admin));
+	$body .= "</div>";
+	
+	$body .= "<div>";
+	$body .= elgg_echo("group_tools:settings:mail");
+	$body .= "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[mail]", "options_values" => $noyes_options, "value" => $plugin->mail));
+	$body .= "</div>";
+	
+	$body .= "<br />";
+	
+	$body .= "<div>";
+	$body .= elgg_echo("group_tools:settings:listing");
+	$body .= "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[group_listing]", "options_values" => $listing_options, "value" => $plugin->group_listing));
+	$body .= "</div>";
+	
+	echo elgg_view_module("inline", $title, $body);
+	
+	// group invite settings
+	$title = elgg_echo("group_tools:settings:invite:title");
+	
+	$body = "<div>";
+	$body .= elgg_echo("group_tools:settings:invite");
+	$body .= "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[invite]", "options_values" => $noyes_options, "value" => $plugin->invite));
+	$body .= "</div>";
+	
+	$body .= "<div>";
+	$body .= elgg_echo("group_tools:settings:invite_email");
+	$body .= "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[invite_email]", "options_values" => $noyes_options, "value" => $plugin->invite_email));
+	$body .= "</div>";
+	
+	$body .= "<div>";
+	$body .= elgg_echo("group_tools:settings:invite_csv");
+	$body .= "&nbsp;" . elgg_view("input/dropdown", array("name" => "params[invite_csv]", "options_values" => $noyes_options, "value" => $plugin->invite_csv));
+	$body .= "</div>";
+	
+	echo elgg_view_module("inline", $title, $body);
 
+	// check group auto join settings
 	if(!empty($auto_joins)) { 
 		$title = elgg_echo("group_tools:settings:auto_join");
 		
@@ -102,5 +107,5 @@
 			}
 		}
 		
-		echo elgg_view_module("info", $title, $content);
+		echo elgg_view_module("inline", $title, $content);
 	}
